--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,13 +1,20 @@
-  a {
+* {
+  box-sizing: border-box;
+  font-family: "Roboto";
+  color: #000000;
+  }
+
+#bloc-page{
+  max-width: 768px;
+  margin: auto;
+}
+
+ 
+ a {
     text-decoration: none;
       &:visited{
         color: #000000;
       }
-  }
-
-  #bloc-page{
-    max-width: 768px;
-    margin: auto;
   }
 
   ul {
