--- a/sass/style.css
+++ b/sass/style.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-a {
-  text-decoration: none;
-}
-a:visited {
+* {
+  box-sizing: border-box;
+  font-family: "Roboto";
   color: #000000;
 }
 
@@ -12,12 +11,64 @@ a:visited {
   margin: auto;
 }
 
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: #000000;
+}
+
 ul {
   list-style-type: none;
 }
 
-* {
-  box-sizing: border-box;
-  font-family: "Roboto";
+.header {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.header__logo {
+  font-family: "Shrikhand", cursive;
+  font-size: 30px;
+  font-weight: 300;
+}
+
+/* Localisation*/
+.localisation {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #edecec;
+  box-shadow: inset 2px 7px 9px -9px rgba(115, 115, 115, 0.75);
+  padding: 15px;
+}
+.localisation__recherche {
+  display: flex;
+  justify-content: center;
+}
+.localisation .fa-location-dot {
+  margin: 0px 6px 0px 6px;
+}
+.localisation input[type=search] {
+  border: none;
+  background-color: #edecec;
+  width: 80%;
+  text-align: center;
+}
+.localisation ::-moz-placeholder {
   color: #000000;
+  font-size: 16px;
+  font-weight: 500;
+}
+.localisation :-ms-input-placeholder {
+  color: #000000;
+  font-size: 16px;
+  font-weight: 500;
+}
+.localisation ::placeholder {
+  color: #000000;
+  font-size: 16px;
+  font-weight: 500;
 }/*# sourceMappingURL=style.css.map */
