--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,4 +2,7 @@
 @import "./utils/mixins";
 
 @import "./base/base.scss";
-@import "./base/typography.scss"
+@import "./base/typography.scss";
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
+@import "./pages/index";
