--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -28,3 +28,37 @@
         font-weight: 500;
     }
 }
+
+/* Description */
+.description{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: red (248, 248, 248);
+
+    &__texte{
+        width: 80%;
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+    &__button-menu{
+        color: #ffffff;
+        font-size: 16px;
+        border-radius: 25px;
+        box-shadow: 0px 6px 8px 0px grey;
+        padding: 15px 25px 15px 25px;
+        transform: scale(1);
+        transition: transform 400ms;
+            &:hover{
+            transform:scale(1.1);
+            }
+        background: linear-gradient(to top, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+    }
+}
+/* Fonctionnement */
+.fonctionnement {
+
+}
