--- a/sass/style.css
+++ b/sass/style.css
@@ -22,6 +22,10 @@ ul {
   list-style-type: none;
 }
 
+h2 {
+  font-size: 24px;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -71,4 +75,34 @@ ul {
   color: #000000;
   font-size: 16px;
   font-weight: 500;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/* Description */
+.description {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: red 248, 248, 248;
+}
+.description__texte {
+  width: 80%;
+  font-size: 18px;
+  font-weight: 300;
+}
+.description__button-menu {
+  color: #ffffff;
+  font-size: 16px;
+  border-radius: 25px;
+  box-shadow: 0px 6px 8px 0px grey;
+  padding: 15px 25px 15px 25px;
+  transform: scale(1);
+  transition: transform 400ms;
+  background: linear-gradient(to top, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
+}
+.description__button-menu:hover {
+  transform: scale(1.1);
+}
+
+/* Fonctionnement *//*# sourceMappingURL=style.css.map */
