--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -62,7 +62,7 @@
 /* Fonctionnement */
 .fonctionnement{
     &__selection{
-        width: 94%;
+        width: 90%;
         height: 70px;
         display: flex;
         align-items: center;
@@ -71,6 +71,15 @@
         box-shadow: 0px 6px 8px 0px rgb(220, 220, 220);
         margin: 15px 25px 25px 25px;
         background: #f6f6f6;
+        transform: scale(1);
+        transition: transform 400ms;
+            &:hover{
+                transform: scale(1.1);
+                background-color: rgba(194, 180, 237, 0.3);
+                i {
+                    color: $colour-primary;
+                }
+            }
     
             &--nombre{
             position: absolute;
