--- a/sass/style.css
+++ b/sass/style.css
@@ -109,7 +109,7 @@ h2 {
 
 /* Fonctionnement */
 .fonctionnement__selection {
-  width: 94%;
+  width: 90%;
   height: 70px;
   display: flex;
   align-items: center;
@@ -118,6 +118,15 @@ h2 {
   box-shadow: 0px 6px 8px 0px rgb(220, 220, 220);
   margin: 15px 25px 25px 25px;
   background: #f6f6f6;
+  transform: scale(1);
+  transition: transform 400ms;
+}
+.fonctionnement__selection:hover {
+  transform: scale(1.1);
+  background-color: rgba(194, 180, 237, 0.3);
+}
+.fonctionnement__selection:hover i {
+  color: #9356DC;
 }
 .fonctionnement__selection--nombre {
   position: absolute;
