--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -105,3 +105,55 @@
             }
         }
 }
+
+.restaurants{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background:#f6f6f6;
+        &__cards{
+            width: 100%;
+            height: 70%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        &__cards a {
+            width: 90%;
+            height: 280px;
+            align-content: space-around;
+            margin: 10px;
+        }
+        &__card {
+            border-radius: 15px;
+            background-color: $colour-white;
+            box-shadow: 8px 5px 10px 5px #f0f2f6;
+        }
+        &__card--image{
+            position: relative;
+            height: 200px;
+            border-radius: 15px 15px 0px 0px;
+            
+        }
+        &__card--image img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 15px 15px 0px 0px;
+        }
+        &__card--image p {
+            position: absolute;
+            text-align: center;
+            width: 23%;
+            top: 7%;
+            right: 3%;
+            font-size: 10px;
+            font-weight: 500;
+            border-radius: 2px;
+            padding: 5px 6px 5px 6px;
+            margin: 0;
+            color: #278870;
+            background: #99e2d0;
+        }
+}
