--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -47,16 +47,11 @@
 
     &__button-menu{
         color: $colour-white;
+        background: linear-gradient(170deg, #ff79da,#e86edb,#cf64dc, #b35cdc,#9356dc);
         font-size: 16px;
         border-radius: 25px;
         box-shadow: 0px 6px 8px 0px grey;
         padding: 15px 25px 15px 25px;
-        transform: scale(1);
-        transition: transform 400ms;
-            &:hover{
-            transform:scale(1.1);
-            }
-        background: linear-gradient(to top, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
     }
 }
 /* Fonctionnement */
@@ -71,10 +66,7 @@
         box-shadow: 0px 6px 8px 0px rgb(220, 220, 220);
         margin: 15px 25px 25px 25px;
         background: #f6f6f6;
-        transform: scale(1);
-        transition: transform 400ms;
             &:hover{
-                transform: scale(1.1);
                 background-color: rgba(194, 180, 237, 0.3);
                 i {
                     color: $colour-primary;
