--- a/sass/style.css
+++ b/sass/style.css
@@ -95,16 +95,11 @@ h2 {
 }
 .description__button-menu {
   color: #FFF;
+  background: linear-gradient(170deg, #ff79da, #e86edb, #cf64dc, #b35cdc, #9356dc);
   font-size: 16px;
   border-radius: 25px;
   box-shadow: 0px 6px 8px 0px grey;
   padding: 15px 25px 15px 25px;
-  transform: scale(1);
-  transition: transform 400ms;
-  background: linear-gradient(to top, #9356dc, #b35cdc, #cf64dc, #e86edb, #ff79da);
-}
-.description__button-menu:hover {
-  transform: scale(1.1);
 }
 
 /* Fonctionnement */
@@ -118,11 +113,8 @@ h2 {
   box-shadow: 0px 6px 8px 0px rgb(220, 220, 220);
   margin: 15px 25px 25px 25px;
   background: #f6f6f6;
-  transform: scale(1);
-  transition: transform 400ms;
 }
 .fonctionnement__selection:hover {
-  transform: scale(1.1);
   background-color: rgba(194, 180, 237, 0.3);
 }
 .fonctionnement__selection:hover i {
