--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -56,6 +56,11 @@
 }
 /* Fonctionnement */
 .fonctionnement{
+    & h2{
+        width: 60%;
+        display: flex;
+        justify-content: space-around;
+    }
     height: 360px;
     &__selection{
         width: 90%;
@@ -105,6 +110,12 @@
     display: flex;
     flex-direction: column;
     background:$colour-light-grey;
+    padding: 0px 0px 40px;
+    & h2{
+        width: 48%;
+        display: flex;
+        justify-content: space-around;
+    }
         &__cards{
             width: 100%;
             height: 70%;
@@ -113,7 +124,7 @@
             justify-content: center;
         }
         &__cards a {
-            width: 90%;
+            width: 94%;
             height: 225px;
         }
         &__card {
