--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -39,10 +39,16 @@
     text-align: center;
     background-color: $colour-light-grey;
 
+    &__titre{
+        width: 80%;
+        margin-bottom: 0;
+    }
+
     &__texte{
         width: 90%;
         font-size: 18px;
         font-weight: 300;
+        margin-bottom: 30px;
     }
 
     &__button-menu{
@@ -57,9 +63,10 @@
 /* Fonctionnement */
 .fonctionnement{
     & h2{
-        width: 60%;
+        width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: flex-start;
+        margin-left: 14px;
     }
     height: 360px;
     &__selection{
@@ -103,7 +110,7 @@
             }
         }
 }
-
+/* Restaurant */
 .restaurants{
     width: 100%;
     height: 100%;
@@ -112,9 +119,10 @@
     background:$colour-light-grey;
     padding: 0px 0px 40px;
     & h2{
-        width: 48%;
+        width: 100%;
         display: flex;
-        justify-content: space-around;
+        justify-content: flex-start;
+        margin-left: 14px;
     }
         &__cards{
             width: 100%;
@@ -147,7 +155,7 @@
         &__card--image p {
             position: absolute;
             text-align: center;
-            width: 23%;
+            width: 15%;
             top: 7%;
             right: 3%;
             font-size: 10px;
