--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -53,11 +53,15 @@
 
     &__button-menu{
         color: $colour-white;
-        background: linear-gradient(170deg, #ff79da,#e86edb,#cf64dc, #b35cdc,#9356dc);
+        background: linear-gradient(-5deg, $colour-primary 2%, #b35cdc, #cf64dc, #e86edb, $colour-secondary);
         font-size: 16px;
         border-radius: 25px;
         box-shadow: 0px 6px 8px 0px grey;
         padding: 15px 25px 15px 25px;
+        &:hover{
+            opacity: 0.7;
+            box-shadow: 0px 6px 8px 0px darken($color:grey, $amount: 60%);
+        }
     }
 }
 /* Fonctionnement */
@@ -102,7 +106,7 @@
                 padding: 0px 30px;
             }
             &--icone i {
-                color: darken($colour-light-grey, 60%);
+                color: darken($colour-light-grey, 50%);
             }
             &--texte{
                 font-size: 12px;
