--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,39 @@
+/* Header accueil */
 .header{
     width: 100%;
+    height: 60px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin: 0;
 
     &__logo{
         font-family: 'Shrikhand',cursive;
         font-size: 30px;
         font-weight: 300;
+        margin: 0;
     }
-    
+/* Header restaurant */
+    &__restau{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    &__retour{
+        position: absolute;
+        left: 5%;
+        font-size: 19px;
+        & i{
+            color: $colour-black;
+        }
+    }
+
+}
+/* Header restaurant image */
+img{
+    width: 100%;
+    object-fit: cover;
+    height: 240px;
 }
