--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -2,7 +2,7 @@ $colour-primary: #9356DC;
 $colour-secondary: #ff79da;
 $colour-tertiary:#99E2D0;
 $colour-white: #FFF;
-$colour-black:#000;
+$colour-black:rgba(0, 0, 0, 0.74);
 $colour-light-grey: rgb(248,248,248);
 
 $mobile: 320px;
