--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -1,11 +1,13 @@
 .menu{
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
     top: -46px;
     background-color: $colour-light-grey;
     border-radius: 25px 25px 0px 0px;
+    padding: 12px 5px 12px 5px;
 
     &__annonce {
         display: flex;
@@ -24,5 +26,89 @@
             font-size: 28px;
             margin: 0px 28px 0px 28px;
         }
+    }
+
+    &__type{
+        width: 38px;
+        height: 39px;
+        font-size: 15px;
+        font-weight: 370;
+        text-transform: uppercase;
+        border-bottom: solid 3px $colour-tertiary;
+        margin: 3px 14px 3px 14px;
+
+        & h3 {
+            font-weight: 350;
+            font-size: 15px;
+        }
+    }
+    
+    &__card{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+        margin: 0px 14px 0px 14px;
+
+        &--choix{
+            position: relative;
+            background-color: $colour-white;
+            width: 100%;
+            height: 66px;
+            border-radius: 15px;
+            box-shadow: 0 3px 7px 0 rgb(0 0 0 / 20%);
+            line-height: 2px;
+            padding: 18px 14px 13px 12px;
+            margin: 9px 0px 7px 0px;
+
+            & h4 {
+                width: 85%;
+                font-size: 18px;
+                font-weight: 500;
+                margin: 0;
+            }
+
+        &--descriptif {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            line-height: 1.5em;
+
+            p {
+                width: 85%;
+                font-weight: 350;
+                font-size: 15px;
+            }
+            
+            span{
+                font-size: 16px;
+                color: darken($colour-light-grey, 70%);
+                padding: 0px 6px 0px 6px;
+            }
+        
+        
+        &--valid {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 58px;
+            height: 100%;
+            position: absolute;
+            right: -50px;
+            top: 0;
+            background-color: $colour-tertiary;
+            border-radius: 0px 15px 15px 0px;
+            opacity: 0;
+
+            
+            
+
+            & .fa-circle-check {
+                color: #fff;
+                font-size: 22px;    
+            }
+        }   
+    }
+}
 }
 }
