--- a/sass/style.css
+++ b/sass/style.css
@@ -310,12 +310,14 @@ img {
 
 .menu {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   position: relative;
   top: -46px;
   background-color: rgb(248, 248, 248);
   border-radius: 25px 25px 0px 0px;
+  padding: 12px 5px 12px 5px;
 }
 .menu__annonce {
   display: flex;
@@ -331,4 +333,74 @@ img {
 .menu__annonce--heart {
   font-size: 28px;
   margin: 0px 28px 0px 28px;
+}
+.menu__type {
+  width: 38px;
+  height: 39px;
+  font-size: 15px;
+  font-weight: 370;
+  text-transform: uppercase;
+  border-bottom: solid 3px #99E2D0;
+  margin: 3px 14px 3px 14px;
+}
+.menu__type h3 {
+  font-weight: 350;
+  font-size: 15px;
+}
+.menu__card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  margin: 0px 14px 0px 14px;
+}
+.menu__card--choix {
+  position: relative;
+  background-color: #FFF;
+  width: 100%;
+  height: 66px;
+  border-radius: 15px;
+  box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2);
+  line-height: 2px;
+  padding: 18px 14px 13px 12px;
+  margin: 9px 0px 7px 0px;
+}
+.menu__card--choix h4 {
+  width: 85%;
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+}
+.menu__card--choix--descriptif {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.5em;
+}
+.menu__card--choix--descriptif p {
+  width: 85%;
+  font-weight: 350;
+  font-size: 15px;
+}
+.menu__card--choix--descriptif span {
+  font-size: 16px;
+  color: #464646;
+  padding: 0px 6px 0px 6px;
+}
+.menu__card--choix--descriptif--valid {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 58px;
+  height: 100%;
+  position: absolute;
+  right: -50px;
+  top: 0;
+  background-color: #99E2D0;
+  border-radius: 0px 15px 15px 0px;
+  opacity: 0;
+}
+.menu__card--choix--descriptif--valid .fa-circle-check {
+  color: #fff;
+  font-size: 22px;
 }/*# sourceMappingURL=style.css.map */
