--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -4,16 +4,15 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    top: -46px;
+    margin-top: -42px;
     background-color: $colour-light-grey;
     border-radius: 25px 25px 0px 0px;
-    padding: 12px 5px 12px 5px;
 
     &__annonce {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 14px;
+        margin: 14px 14px 0px 14px;
     
 
         &--titre {
@@ -35,7 +34,7 @@
         font-weight: 370;
         text-transform: uppercase;
         border-bottom: solid 3px $colour-tertiary;
-        margin: 3px 14px 3px 14px;
+        margin: 2px 14px 3px 14px;
 
         & h3 {
             font-weight: 350;
@@ -48,7 +47,7 @@
         flex-direction: column;
         justify-content: space-between;
         position: relative;
-        margin: 0px 14px 0px 14px;
+        margin: 3px 14px 0px 14px;
 
         &--choix{
             position: relative;
@@ -57,58 +56,87 @@
             height: 66px;
             border-radius: 15px;
             box-shadow: 0 3px 7px 0 rgb(0 0 0 / 20%);
-            line-height: 2px;
-            padding: 18px 14px 13px 12px;
-            margin: 9px 0px 7px 0px;
+            line-height: 1.5em;
+            padding: 12px 12px 11px 9px;
+            margin: 7px 0px 7px 0px;
 
             & h4 {
                 width: 85%;
+                height: 22px;
                 font-size: 18px;
                 font-weight: 500;
                 margin: 0;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap	;
             }
 
-        &--descriptif {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            line-height: 1.5em;
+            &--descriptif {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                line-height: 1.5em;
 
-            p {
-                width: 85%;
-                font-weight: 350;
-                font-size: 15px;
-            }
+                p {
+                    width: 80%;
+                    font-weight: 350;
+                    font-size: 15px;
+                    margin: 0;
+                    text-overflow: ellipsis;
+                    overflow: hidden;
+                    white-space: nowrap;
+                }
             
-            span{
-                font-size: 16px;
-                color: darken($colour-light-grey, 70%);
-                padding: 0px 6px 0px 6px;
-            }
-        
-        
-        &--valid {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 58px;
-            height: 100%;
-            position: absolute;
-            right: -50px;
-            top: 0;
-            background-color: $colour-tertiary;
-            border-radius: 0px 15px 15px 0px;
-            opacity: 0;
+                span{
+                    font-size: 16px;
+                    color: darken($colour-light-grey, 70%);
+                    padding: 0px 6px 0px 6px;
+                    font-weight: bold;
+                }
 
-            
-            
+            &--valid {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                width: 58px;
+                height: 100%;
+                position: absolute;
+                right: -50px;
+                top: 0;
+                background-color: $colour-tertiary;
+                border-radius: 0px 15px 15px 0px;
+                opacity: 0;
 
-            & .fa-circle-check {
-                color: #fff;
-                font-size: 22px;    
-            }
-        }   
+                & .fa-circle-check {
+                    color: #fff;
+                    font-size: 22px;    
+                    }
+                }
+            }   
+        }
     }
+
+    &__button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 30px 106px 30px 106px;
+        background: linear-gradient(-5deg, $colour-primary 2%, #b35cdc, #cf64dc, #e86edb, $colour-secondary);
+        font-size: 16px;
+        border-radius: 25px;
+        box-shadow: 0px 6px 8px 0px grey;
+        padding: 15px 25px 15px 25px;
+        &:hover{
+            opacity: 0.7;
+            box-shadow: 0px 6px 8px 0px darken($color:grey, $amount: 60%);
+        }
+    }
+    
+    &__button--commander{
+            color: $colour-white;
+        }
 }
-}
-}
+
+ 
+
+
