--- a/sass/style.css
+++ b/sass/style.css
@@ -314,16 +314,15 @@ img {
   display: flex;
   flex-direction: column;
   position: relative;
-  top: -46px;
+  margin-top: -42px;
   background-color: rgb(248, 248, 248);
   border-radius: 25px 25px 0px 0px;
-  padding: 12px 5px 12px 5px;
 }
 .menu__annonce {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 14px;
+  margin: 14px 14px 0px 14px;
 }
 .menu__annonce--titre {
   font-size: 26px;
@@ -341,7 +340,7 @@ img {
   font-weight: 370;
   text-transform: uppercase;
   border-bottom: solid 3px #99E2D0;
-  margin: 3px 14px 3px 14px;
+  margin: 2px 14px 3px 14px;
 }
 .menu__type h3 {
   font-weight: 350;
@@ -352,7 +351,7 @@ img {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
-  margin: 0px 14px 0px 14px;
+  margin: 3px 14px 0px 14px;
 }
 .menu__card--choix {
   position: relative;
@@ -361,15 +360,19 @@ img {
   height: 66px;
   border-radius: 15px;
   box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2);
-  line-height: 2px;
-  padding: 18px 14px 13px 12px;
-  margin: 9px 0px 7px 0px;
+  line-height: 1.5em;
+  padding: 12px 12px 11px 9px;
+  margin: 7px 0px 7px 0px;
 }
 .menu__card--choix h4 {
   width: 85%;
+  height: 22px;
   font-size: 18px;
   font-weight: 500;
   margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .menu__card--choix--descriptif {
   display: flex;
@@ -378,14 +381,19 @@ img {
   line-height: 1.5em;
 }
 .menu__card--choix--descriptif p {
-  width: 85%;
+  width: 80%;
   font-weight: 350;
   font-size: 15px;
+  margin: 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 .menu__card--choix--descriptif span {
   font-size: 16px;
   color: #464646;
   padding: 0px 6px 0px 6px;
+  font-weight: bold;
 }
 .menu__card--choix--descriptif--valid {
   display: flex;
@@ -403,4 +411,22 @@ img {
 .menu__card--choix--descriptif--valid .fa-circle-check {
   color: #fff;
   font-size: 22px;
+}
+.menu__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 106px 30px 106px;
+  background: linear-gradient(-5deg, #9356DC 2%, #b35cdc, #cf64dc, #e86edb, #ff79da);
+  font-size: 16px;
+  border-radius: 25px;
+  box-shadow: 0px 6px 8px 0px grey;
+  padding: 15px 25px 15px 25px;
+}
+.menu__button:hover {
+  opacity: 0.7;
+  box-shadow: 0px 6px 8px 0px black;
+}
+.menu__button--commander {
+  color: #FFF;
 }/*# sourceMappingURL=style.css.map */
