création des mixins (btn+tuto selection)

--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -95,9 +95,7 @@
                 }
 
             &--valid {
-                display: flex;
-                justify-content: center;
-                align-items: center;
+                @include flex-center;
                 width: 58px;
                 height: 100%;
                 position: absolute;
@@ -117,24 +115,14 @@
     }
 
     &__button{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex-center;
         margin: 30px 106px 30px 106px;
 
     }
     
     &__button--commander{
-        background: linear-gradient(-5deg, $colour-primary 2%, #b35cdc, #cf64dc, #e86edb, $colour-secondary);
-        font-size: 16px;
-        border-radius: 25px;
-        box-shadow: 0px 6px 8px 0px grey;
-        padding: 15px 25px 15px 25px;
-        &:hover{
-            opacity: 0.7;
-            box-shadow: 0px 6px 8px 0px darken($color:grey, $amount: 60%);
-        }
-            color: $colour-white;
+        @include btn; 
+        @include btn_dégradé;
         }
 }
 
