--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -152,6 +152,6 @@
             justify-content: center;
             width: 15%;
             height: 60px;
-
-        }
+            @include heart;
+            }
 }
