--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -24,6 +24,7 @@
         &--heart {
             font-size: 28px;
             margin: 0px 28px 0px 28px;
+            @include heart;
         }
     }
 
