--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -60,6 +60,35 @@
             line-height: 1.5em;
             padding: 12px 12px 11px 9px;
             margin: 7px 0px 7px 0px;
+            animation: 0.3s ease-out both, view 2s both;
+            &:hover{
+            &.menu__card--choix--descriptif{
+                width: 83%;
+                transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);}
+
+            &.menu__card--choix--descriptif--valid{
+                opacity: 1;
+                transform: translate(-45px);
+                transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);}
+
+            &.fa-circle-check {  
+                transform: rotate(360deg);
+                transition: transform 500ms ease-in-out;}
+                    
+            }
+
+            &:nth-child(1){
+                animation-delay: 600ms;
+            }
+            &:nth-child(2){
+                animation-delay: 900ms;
+            }
+            &:nth-child(3){
+                animation-delay: 1200ms;
+            }
+            &:nth-child(3){
+                animation-delay: 1500ms;
+            }
 
             & h4 {
                 width: 85%;
@@ -79,7 +108,7 @@
                 line-height: 1.5em;
 
                 p {
-                    width: 80%;
+                    width: 71%;
                     font-weight: 350;
                     font-size: 15px;
                     margin: 0;
@@ -110,6 +139,7 @@
                     color: #fff;
                     font-size: 22px;    
                     }
+                
                 }
             }   
         }
