--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables.scss";
 @import "./utils/mixins";
-
+@import "./utils/keyframes";
 @import "./base/base.scss";
 @import "./base/typography.scss";
 @import "./layout/header.scss";
