--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,6 +9,14 @@
         font-size: 20px;
         font-weight: 270;
         padding: 10px 20px 10px;
+        @include media-min ($desktop){
+            display: flex;
+            justify-content: center;
+        }
+        @include media-min ($tablet){
+            display: flex;
+            justify-content: center;
+        }
     }
     &__menu{
         display: flex;
@@ -28,4 +36,21 @@
         }
         }
 }
+    & ul{
+        @include media-min ($desktop){
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            min-height: 60px;
+        }
+
+        @include media-min ($tablet){
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            min-height: 60px;
+        }
+    }
 }
