--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -8,11 +8,24 @@
     background-color: $colour-light-grey;
     border-radius: 25px 25px 0px 0px;
 
-    &__annonce {
+    @include media-min ($desktop){
+        &__full{
         display: flex;
+        width: 100%;
+        height: 75%;
         justify-content: space-between;
-        align-items: center;
-        margin: 14px 14px 0px 14px;
+        margin: 20px 0px 20px 0px;
+        .full{
+            width: 36%;
+        }
+    }
+    }
+
+        &__annonce {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 14px 14px 0px 14px;
     
 
         &--titre {
@@ -30,7 +43,7 @@
 
     &__type{
         width: 38px;
-        height: 39px;
+        height: 27px;
         font-size: 15px;
         font-weight: 370;
         text-transform: uppercase;
@@ -61,6 +74,7 @@
             padding: 12px 12px 11px 9px;
             margin: 7px 0px 7px 0px;
             animation: 0.3s ease-out both, view 2s both;
+
 
             &:nth-child(1){
                 animation-delay: 600ms;
