--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -86,8 +86,7 @@
         @include media-min($tablet){
             &__selectionall{
                 display: flex;
-                justify-content: center;
-                flex-direction: column;
+                justify-content: space-around;
                 align-items: center;
             }
         }
@@ -151,7 +150,7 @@
                 margin: 27px;
             }
             @include media-min ($tablet){
-                width: 47%;
+                width: 45%;
             }
         }
         &__card {
