--- a/sass/style.css
+++ b/sass/style.css
@@ -272,8 +272,7 @@ img {
 @media screen and (min-width: 768px) {
   .fonctionnement__selectionall {
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
   }
 }
@@ -387,7 +386,7 @@ img {
 }
 @media screen and (min-width: 768px) {
   .restaurants__cards a {
-    width: 47%;
+    width: 45%;
   }
 }
 .restaurants__card {
@@ -474,6 +473,18 @@ img {
   background-color: rgb(248, 248, 248);
   border-radius: 25px 25px 0px 0px;
 }
+@media screen and (min-width: 992px) {
+  .menu__full {
+    display: flex;
+    width: 100%;
+    height: 75%;
+    justify-content: space-between;
+    margin: 20px 0px 20px 0px;
+  }
+  .menu__full .full {
+    width: 36%;
+  }
+}
 .menu__annonce {
   display: flex;
   justify-content: space-between;
@@ -505,7 +516,7 @@ img {
 }
 .menu__type {
   width: 38px;
-  height: 39px;
+  height: 27px;
   font-size: 15px;
   font-weight: 370;
   text-transform: uppercase;
