--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -75,21 +75,32 @@
             margin: 7px 0px 7px 0px;
             animation: 0.3s ease-out both, view 2s both;
 
-
-            &:nth-child(1){
-                animation-delay: 600ms;
-                &:hover {
-                    @include check;
+            &:hover{
+                & h4{
+                    width:64%;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
-            }
-            &:nth-child(2){
-                animation-delay: 900ms;
-            }
-            &:nth-child(3){
-                animation-delay: 1200ms;
-            }
-            &:nth-child(3){
-                animation-delay: 1500ms;
+                &.menu__card--choix--descriptif--valid{
+                    opacity: 1;
+                    transform: translate(-3rem);
+                    transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
+                }                
+                &.fa-circle-check {  
+                    transform: rotate(360deg);
+                    transition: transform 500ms ease-in-out;
+                }
+
+                &.menu__card--choix--descriptif{
+                    width: 83%;
+                    transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
+                }
+
+                    p{
+                        width:82%;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                    }
             }
 
             & h4 {
@@ -101,6 +112,20 @@
                 text-overflow: ellipsis;
                 overflow: hidden;
                 white-space: nowrap	;
+            }
+
+            &:nth-child(1){
+                animation-delay: 600ms;
+            }
+
+            &:nth-child(2){
+                animation-delay: 900ms;
+            }
+            &:nth-child(3){
+                animation-delay: 1200ms;
+            }
+            &:nth-child(3){
+                animation-delay: 1500ms;
             }
 
             &--descriptif {
