--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -8,12 +8,12 @@
     background-color: $colour-light-grey;
     border-radius: 25px 25px 0px 0px;
 
+    &__full{
     @include media-min ($desktop){
-        &__full{
         display: flex;
         width: 100%;
         height: 75%;
-        justify-content: space-between;
+        justify-content: space-around;
         margin: 20px 0px 20px 0px;
         .full{
             width: 36%;
@@ -21,11 +21,11 @@
     }
     }
 
-        &__annonce {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin: 14px 14px 0px 14px;
+    &__annonce {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 14px 14px 0px 14px;
     
 
         &--titre {
@@ -74,34 +74,13 @@
             padding: 12px 12px 11px 9px;
             margin: 7px 0px 7px 0px;
             animation: 0.3s ease-out both, view 2s both;
-
-            &:hover{
-                & h4{
-                    width:64%;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
-                &.menu__card--choix--descriptif--valid{
-                    opacity: 1;
-                    transform: translate(-3rem);
-                    transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
-                }                
-                &.fa-circle-check {  
-                    transform: rotate(360deg);
-                    transition: transform 500ms ease-in-out;
-                }
-
-                &.menu__card--choix--descriptif{
-                    width: 83%;
-                    transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
-                }
-
-                    p{
-                        width:82%;
-                        text-overflow: ellipsis;
-                        white-space: nowrap;
-                    }
+            @include media-min($desktop) {
+                width: 90%;
             }
+            &:hover{
+                @include check
+            }
+
 
             & h4 {
                 width: 85%;
