--- a/sass/style.css
+++ b/sass/style.css
@@ -3,6 +3,7 @@
 /* Button dégradé */
 /* Fonctionnement*/
 /* Coeur*/
+/* Animation restaurant valide*/
 /* Responsive*/
 /* Loader */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
@@ -604,7 +605,7 @@ img {
     display: flex;
     width: 100%;
     height: 75%;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 20px 0px 20px 0px;
   }
   .menu__full .full {
@@ -673,28 +674,23 @@ img {
   -webkit-animation: 0.3s ease-out both, view 2s both;
           animation: 0.3s ease-out both, view 2s both;
 }
-.menu__card--choix:hover h4 {
-  width: 64%;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+@media screen and (min-width: 992px) {
+  .menu__card--choix {
+    width: 90%;
+  }
 }
-.menu__card--choix:hover.menu__card--choix--descriptif--valid {
+.menu__card--choix:hover .menu__card--choix--descriptif--valid {
   opacity: 1;
   transform: translate(-3rem);
   transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
 }
-.menu__card--choix:hover.fa-circle-check {
-  transform: rotate(360deg);
-  transition: transform 500ms ease-in-out;
-}
-.menu__card--choix:hover.menu__card--choix--descriptif {
+.menu__card--choix:hover .menu__card--choix--descriptif {
   width: 83%;
   transition: all 0.5s cubic-bezier(0.1, 0, 0.2, 1);
 }
-.menu__card--choix:hover p {
-  width: 82%;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.menu__card--choix:hover .fa-circle-check {
+  transform: rotate(360deg);
+  transition: transform 500ms ease-in-out;
 }
 .menu__card--choix h4 {
   width: 85%;
