--- a/sass/style.css
+++ b/sass/style.css
@@ -8,6 +8,28 @@
 /* Loader */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@-webkit-keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes loader {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @-webkit-keyframes grow {
   0% {
     transform: scale(0);
@@ -36,28 +58,6 @@
     opacity: 0;
   }
 }
-@-webkit-keyframes loader {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes loader {
-  0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 /* Heart */
 @-webkit-keyframes fill {
   0% {
@@ -83,18 +83,24 @@
 }
 /* Menu Restaurant */
 @-webkit-keyframes view {
-  from {
+  0% {
     opacity: 0;
   }
-  to {
+  50% {
+    opacity: 0, 2;
+  }
+  100% {
     opacity: 1;
   }
 }
 @keyframes view {
-  from {
+  0% {
     opacity: 0;
   }
-  to {
+  50% {
+    opacity: 0, 2;
+  }
+  100% {
     opacity: 1;
   }
 }
@@ -237,6 +243,10 @@ img {
   width: 100%;
   height: 100%;
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 9999;
   pointer-events: none;
   -webkit-animation: loader 1s ease-in-out 2s forwards;
@@ -389,6 +399,7 @@ img {
 @media screen and (min-width: 992px) {
   .fonctionnement h2 {
     justify-content: center;
+    margin-left: 0px;
   }
   .fonctionnement__selectionall {
     display: flex;
@@ -464,6 +475,7 @@ img {
 @media screen and (min-width: 992px) {
   .restaurants h2 {
     justify-content: center;
+    margin-left: 0px;
   }
 }
 .restaurants__cards {
@@ -473,34 +485,33 @@ img {
   flex-wrap: wrap;
   justify-content: center;
 }
-@media screen and (min-width: 992px) {
-  .restaurants__cards {
-    height: 80%;
-    justify-content: space-around;
-  }
-}
 @media screen and (min-width: 768px) {
   .restaurants__cards {
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    margin: 2px 5px 0px 5px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurants__cards {
+    height: 80%;
+    justify-content: space-around;
   }
 }
 .restaurants__cards a {
   width: 94%;
   height: 225px;
 }
-@media screen and (min-width: 992px) {
-  .restaurants__cards a {
-    width: 45%;
-    margin: 27px;
-  }
-}
 @media screen and (min-width: 768px) {
   .restaurants__cards a {
     width: 45%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .restaurants__cards a {
+    width: 40%;
+    margin: 27px;
   }
 }
 .restaurants__card {
@@ -658,6 +669,7 @@ img {
   line-height: 1.5em;
   padding: 12px 12px 11px 9px;
   margin: 7px 0px 7px 0px;
+  overflow: hidden;
   -webkit-animation: 0.3s ease-out both, view 2s both;
           animation: 0.3s ease-out both, view 2s both;
 }
