--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,6 +4,10 @@
     width: 100%;
     height: 100%;
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 9999;
     pointer-events: none;
     animation: loader 1s ease-in-out 2s forwards;
@@ -190,5 +194,4 @@
         &{ @content; }
     }
 }
-    
     
